--- a/index.html
+++ b/index.html
@@ -183,6 +183,30 @@
         padding: 18px;
         box-shadow: var(--shadow);
       }
+      /* Hero image (better control on iPhone): use <img> with object-position */
+      .hero {
+        position: relative;
+        width: 100%;
+        min-height: clamp(360px, 65vh, 720px);
+        aspect-ratio: 4 / 5; /* keeps a sane crop on desktop too */
+        overflow: hidden;
+        border-radius: 14px;
+        background: #f6f6f6;
+      }
+      .hero-img {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 12%; /* keep face/headroom visible */
+        display: block;
+      }
+      @media (max-width: 600px) {
+        .hero-img {
+          object-position: 50% 8%; /* more headroom on phones */
+        }
+      }
       /* Hero image caption — always bottom, readable on bright images */
       .hero-caption {
         position: absolute;
@@ -452,34 +476,13 @@
 
         <!-- Hero Photo -->
         <div>
-          <div class="card" style="position: relative; overflow: hidden">
-            <!-- Hero Photo: swap IMG_2389.jpeg here if needed -->
-            <div
-              style="
-                width: 100%;
-                aspect-ratio: 4/5;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                overflow: hidden;
-                position: relative;
-                border-radius: 14px;
-                background: #f6f6f6;
-              "
-            >
-              <img
-                src="IMG_2389.jpeg"
-                alt="Dimitar Yanchev"
-                style="
-                  object-fit: contain;
-                  width: 100%;
-                  height: auto;
-                  max-height: 100%;
-                  border-radius: 14px;
-                  display: block;
-                  background: #f6f6f6;
-                "
-              />
+          <div
+            class="card"
+            style="position: relative; overflow: hidden; border-radius: 14px"
+          >
+            <!-- Hero Photo with controlled crop -->
+            <div class="hero">
+              <img class="hero-img" src="IMG_2389.jpeg" alt="Dimitar Yanchev" />
               <div class="hero-caption">
                 <div class="title">
                   Message‑First Coaching, Built Around Your Time
