--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       @media (max-width: 600px) {
         /* Give non-full-bleed sections healthier side padding on phones */
         .container:not(.full-bleed) {
-          padding-left: max(20px, calc(12px + env(safe-area-inset-left)));
-          padding-right: max(20px, calc(12px + env(safe-area-inset-right)));
+          padding-left: max(14px, calc(8px + env(safe-area-inset-left)));
+          padding-right: max(14px, calc(8px + env(safe-area-inset-right)));
         }
       }
       /* Prevent edge collisions from long words/URLs */
@@ -91,8 +91,8 @@
       }
       /* Optional utility to nudge inner blocks without touching layout */
       .mobile-pad {
-        padding-left: clamp(8px, 3vw, 14px);
-        padding-right: clamp(8px, 3vw, 14px);
+        padding-left: clamp(0px, 1.5vw, 8px);
+        padding-right: clamp(0px, 1.5vw, 8px);
       }
 
       /* Full-bleed utility for true edge-to-edge rows (iPhone-safe) */
@@ -142,6 +142,8 @@
         border-bottom: 1px solid var(--border);
         padding-left: env(safe-area-inset-left);
         padding-right: env(safe-area-inset-right);
+        left: 0;
+        right: 0;
       }
       /* Make header content full-width on mobile (no 90% look) */
       header > .container {
@@ -465,7 +467,7 @@
     <!-- ================= HERO ================= -->
     <section>
       <div class="container grid grid-2">
-        <div class="mobile-pad">
+        <div>
           <div class="mini" style="color: var(--green-ink)">
             Dimitar Yanchev · Body Transformation Specialist
           </div>
